add file of navi

--- a/css/index.css
+++ b/css/index.css
@@ -66,8 +66,8 @@ a:visited{
 
 
 footer{
-	background-color: black;
-	height: 200px;
+	background-color: #8b4513;
+	height: 270px;
 }
 footer h3{
 	font-size: 30px;
