--- a/css/index.css
+++ b/css/index.css
@@ -6,9 +6,18 @@ body{
 div img{
 	margin-right: 20px;
 }
+/* *****current pages***** */
+a:link.current-path-header, a:visited.current-path-header{
+	color: red;
+}
+a:link.current-path-footer, a:visited.current-path-footer{
+	color: greenyellow;
+}
+
+/* *****header***** */
 .header-wrapper h1{
 	color: red;
-	font-size: 50px;
+	font-size: 40px;
 	font-family: cursive;
 	margin: 0px 0px 0px 10px;
 	/* margin-right: 30px; */
@@ -16,7 +25,7 @@ div img{
 }
 .header-wrapper{
 	background-color: black;
-	height: 125px;
+	height: 115px;
 }
 .header-languages{
 	float: right;
@@ -37,13 +46,19 @@ div img{
 a{
 	text-decoration: none;
 }
-a:link{
+a:link, a:visited{
 	color: white;
 }
-a:visited{
-	color: white;
+.header-languages a:active, .header-languages a:hover{
+	color: red;
+	font-size: 21px;
+}
+.header-position a:active, .header-position a:hover{
+	color: red;
+	font-size: 21px;
 }
 
+/* *****body***** */
 .top-wrapper{
 	padding-top: 80px;
 	height: 500px;
@@ -57,25 +72,33 @@ a:visited{
 }
 .main-container h1{
 	color: #8b4513;
+	border-left: 5px greenyellow groove;
+	position: relative;
+	line-height: 1.2;
+	-webkit-box-reflect: below -15px -webkit-linear-gradient(top,rgba(0,0,0,0),rgba(0,0,0,0) 10%,rgba(0, 0, 0, 0.6));
+}
+.main-container a{
+	color: #8b4513;
+}
+.main-container a:hover{
+	color: black;
+}
+.freespace{
+	margin-bottom: 150px;
 }
 
-
-
-
-
-
-
-footer{
+/* *****footer***** */
+.footer{
 	background-color: #8b4513;
 	height: 270px;
 }
-footer h3{
+.footer h3{
 	font-size: 30px;
 	font-family: cursive;
 	border-bottom: thin dotted; /*点線を描く*/
 	border-bottom-width: 1px;
 }
-footer h3, footer small{
+.footer h3, .footer small{
 	color: white;
 	margin-bottom: 10px;
 }
@@ -83,7 +106,14 @@ footer h3, footer small{
 .container{
 	padding: 0px 240px;
 }
-footer ul li{
+.footer ul li{
 	color: #ffa500;
 	list-style-type: square; /*ラジオボタンを四角に*/
+}
+.container a:active, .container a:hover{
+	color: greenyellow;
+	/* font-size: 21px; */
+}
+.checker-img{
+	float: right;
 }
