--- a/css/index.css
+++ b/css/index.css
@@ -83,6 +83,12 @@ a:link, a:visited{
 .main-container a:hover{
 	color: black;
 }
+.result-position p{
+	margin-left: 50px;
+}
+.fontsize p{
+	font-size: 120%;
+}
 .freespace{
 	margin-bottom: 150px;
 }
